@@ -14,6 +14,7 @@ CicPort=5001
 NetcuePort=/dev/ttyS0
 LivewireIpAddress=192.168.21.21
 AdapterIpAddress=192.168.21.11
+RelayDebounceInterval=500
 InputBusXfers=No
 OutputBusXfers=Yes
 
